# singleline

./: README.md  example.sl  pyproject.toml  singleline.py  tools.txt
